# sturdy-spork

./: # === ChatGPT  Codex permanent setu.txt  # Define source files and the targe.txt  # PowerShell script to copy files t.txt  .gitattributes  .gitignore  BallisticTargetGUI.py  BallisticTargetGUI.py.bak_20260221_200907  BallisticTargetGUI.py.bak_portable  BallisticTargetGUI.spec  BallisticTarget_iOS.html  EnvironmentalsGeoGUI.py  EnvironmentalsGeoGUI.py.bak_20260221_200907  EnvironmentalsGeoGUI.spec  EnvironmentalsGeo_iOS.html  Microsoft.PowerShell_profile.ps1  RemoveBOM.ps1  Set-Location GBallisticTargetsrc.txt  Start_Codex5.cmd  Start_Codex5.ps1  Start_Codex53.ps1  Start_Codex54.cmd  Start_Codex54.ps1  Uninstall.spec  _make_portable_patch.py  _tmp_numbered.txt  codex_profile.ps1  geo_projection.py  geo_weather.py  notepad $envUSERPROFILE.codexconfig.txt  patch_ballistics.py  setup-codex.ps1  setup-codex54.ps1  vpn_guard.py  vpn_guard.spec  web_ballistics.py  ~InstallBallistic.DDF
Shared-Python-Toolchain/: .gitignore  BallisticTargetInstaller.local.sed  HyperVSetup.spec  README.txt  SecurityGateway.spec  SecurityGatewayInstaller.spec  SecurityGatewayInstallerConsole.spec  Start_Codex5.ps1  Start_Codex53.ps1  Start_Codex54.cmd  Start_Codex54.ps1  Uninstall.spec  conda.yml  hyperv_setup_entry.py  logincodex.ps1  pyproject.toml  pytest_local_tmp.py  run-setup.cmd
Shared-Python-Toolchain/common_crypto/: __init__.py
Shared-Python-Toolchain/docs/: ARCHITECTURE.md  LAPTOP_INSTALL_CHECKLIST.md  RELEASE_NOTES_2026-03-29.md  SECURITY_GATEWAY_SOC_ROADMAP.md  TOOLCHAIN_NOTES.md  (+2 more)
(+327 files in other folders)
