[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-gateway"
version = "0.1.0"
description = "Layered zero-trust security orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.6",
    "requests>=2.32",
    "rich>=13.7",
    "typer>=0.12",
    "uvicorn>=0.27",
    "websockets>=12.0",
    "cryptography>=42.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "pytest-asyncio>=0.23"]

[project.scripts]
security-gateway = "security_gateway.cli:app"
memory-optimizer = "memory_optimizer.cli:app"

[tool.setuptools]
packages = ["security_gateway", "memory_optimizer", "common_crypto"]
